# powermanga

./: CMakeLists.txt  EMSCRIPTEN.txt  powermanga  powermanga-scores
html/powermanga_en/: style.css
html/powermanga_en/powermanga_en_fichiers/: filelist.xml
html/powermanga_fr/powermanga_fr_fichiers/: filelist.xml
order/: scriptorder1_en.txt  scriptorder1_fr.txt  scriptorder2_en.txt  scriptorder2_fr.txt  scriptorder3_en.txt  scriptorder3_fr.txt
src/: config.h  enemies.c  meteors_phase.c  powermanga.h  spaceship.c
texts/: about_en.txt  about_fr.txt  order_it.txt  scroll_en.txt  scroll_fr.txt  text_en.txt  text_fr.txt
